remove: remove useless setting